feat: キーリマッパーのUI

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,9 +5,7 @@
     <title>Windows Key Remapper MVP</title>
   </head>
   <body>
-    <h1>Key Remapper Hook Test</h1>
-    <p>Status: <span id="status">Waiting for key events...</span></p>
-    <ul id="log"></ul>
-    <script type="module" src="./src/renderer.ts"></script>
+    <div id="root"></div>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
